--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -30,6 +30,7 @@
   .hiddenNavbar {
     display: none;
     opacity: 0;
+    visibility: hidden;
     transition: opacity 0.3s ease;
   }
   .containeur_Body_Navbar {
@@ -37,12 +38,16 @@
     right: 0px;
     bottom: none;
     width: 15%;
-    height: 100%;
+    height: 100vh;
     flex-direction: column;
     justify-content: flex-start;
     gap: 3rem;
     opacity: 1;
     transition: opacity 0.3s ease;
+  }
+
+  .containeur_Body_Navbar.visible {
+    opacity: 1;
   }
   .home_Navbar {
     display: none;
