--- a/frontend/src/components/Comments/Comments.css
+++ b/frontend/src/components/Comments/Comments.css
@@ -106,7 +106,7 @@ span .date {
   height: 0rem;
 }
 
-.dropdown_Menu button {
+.comments_dropdown_Btn {
   border: none;
   background-color: transparent;
   width: 100%;
