--- a/frontend/src/components/Watch/Video/WatchingVideoCard.css
+++ b/frontend/src/components/Watch/Video/WatchingVideoCard.css
@@ -119,7 +119,7 @@
   height: 0rem;
 }
 
-.dropdown_Menu button {
+.video_dropdown_Btn {
   border: none;
   background-color: transparent;
   width: 100%;
