--- a/frontend/src/components/SubCard/SubCard.css
+++ b/frontend/src/components/SubCard/SubCard.css
@@ -5,7 +5,16 @@
   flex-wrap: wrap;
   align-items: center;
   flex-direction: row;
-  padding: 1rem;
+  padding: 0 1rem;
+  position: relative;
+}
+
+.subCard_Username {
+  border: none;
+  background-color: transparent;
+  color: var(--white);
+  font-family: "poppins";
+  font-size: 20px;
 }
 
 .container_Title_Sub {
@@ -25,30 +34,31 @@
   align-items: center;
 }
 
-.avatar_container {
+.avatar_Container {
   margin: 1rem;
 }
 
 .user_Sub {
-  color: white;
+  color: var(--white);
   margin-right: 13rem;
 }
 
 .moreVert_Icon_ContainerSub {
   display: flex;
   align-items: flex-end;
-  cursor: pointer;
-  position: absolute;
-  flex-direction: column;
-  margin-top: 10.5rem;
-  margin-right: 0.7rem;
+  align-items: center;
+  flex-direction: row-reverse;
 }
 
 .moreVert_Icon_ContainerSub.active {
   background-color: var(--grey);
   transform: translateX(0);
   transition: var(--speed) ease;
-  color: white;
+  color: var(--white);
+  padding: 1rem;
+  position: absolute;
+  right: 2rem;
+  border-radius: 10px;
 }
 
 .moreVert_Icon_ContainerSub.inactive {
@@ -62,6 +72,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
+  color: var(--white);
 }
 
 .dropdown_Menu.active {
@@ -77,7 +88,7 @@
   transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 
-.dropdown_Menu button {
+.remove_Follower_Btn {
   border: none;
   background-color: transparent;
   width: 100%;
@@ -85,7 +96,7 @@
   font-size: inherit;
   font-weight: inherit;
   font-family: inherit;
-  padding: 0;
+  padding: 1rem;
 }
 
 .dropdown_Menu ul {
