--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
+  padding: 1rem;
 }
 
 .title_Category_Animal {
@@ -51,7 +52,10 @@
 .categoryContainer {
   display: flex;
   flex-direction: column;
+  margin: 1rem;
   gap: 5px;
+  color: var(--orange);
+  font-size: 20px;
 }
 
 @media only screen and (min-width: 1024px) {
