--- a/frontend/src/components/Videocard/VideoCard.css
+++ b/frontend/src/components/Videocard/VideoCard.css
@@ -18,6 +18,8 @@
   display: flex;
   width: 85%;
   margin-left: 1rem;
+  color: var(--white);
+  font-size: 16px;
 }
 .avatar_Container {
   display: flex;
@@ -96,11 +98,13 @@
 .video_Title {
   font-size: 1.2rem;
   cursor: pointer;
+  color: var(--white);
 }
 .creator_Username {
   font-size: 1rem;
   line-height: 1.5rem;
   cursor: pointer;
+  color: var(--white);
 }
 
 .hidden {
