--- a/frontend/src/components/Description/Description.css
+++ b/frontend/src/components/Description/Description.css
@@ -6,7 +6,8 @@
   gap: 1rem;
   padding-left: 3%;
   padding-right: 3%;
-  height: 11.33rem;
+  padding-bottom: 2rem;
+  height: auto;
   border-bottom: 0.0002rem solid;
   border-bottom-color: var(--white);
 }
@@ -16,4 +17,14 @@
 }
 .description_Component span {
   font-size: 18px;
+}
+
+.desc_N_Coms {
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .desc_N_Coms {
+    width: 100%;
+  }
 }
