added css to watchpage again

--- a/frontend/src/components/Watch/Video/WatchingVideoCard.css
+++ b/frontend/src/components/Watch/Video/WatchingVideoCard.css
@@ -119,7 +119,7 @@
   height: 0rem;
 }
 
-.video_dropdown_Btn {
+.dropdown_Menu button {
   border: none;
   background-color: transparent;
   width: 100%;
