added favorite page + split short/video type logic

--- a/frontend/src/pages/SearchResult/SearchResult.css
+++ b/frontend/src/pages/SearchResult/SearchResult.css
@@ -1,5 +1,5 @@
 .search_Result_Section_Wrapper {
-  min-height: calc(100vh - 5.5rem);
+  min-height: calc(100vh + 6rem);
 }
 
 .search_Result_Section {
