--- a/frontend/src/pages/Favorites/Favorites.css
+++ b/frontend/src/pages/Favorites/Favorites.css
@@ -1,13 +1,13 @@
 .container_Body_Sub {
   background-color: var(--black);
-  min-height: calc(100vh + 6rem);
+  min-height: calc(100vh +6rem);
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .title_Sub {
-  color: var(--white);
+  color: rgba(255, 255, 255, 1);
   font-size: 35px;
   text-align: center;
   font-family: "poppins";
