--- a/frontend/src/pages/UsersProfile/UsersProfile.css
+++ b/frontend/src/pages/UsersProfile/UsersProfile.css
@@ -5,7 +5,7 @@
   justify-content: center;
   color: var(--white);
   text-align: center;
-  min-height: calc(100vh - 5.5rem);
+  min-height: calc(100vh + 6rem);
   justify-content: flex-start;
 }
 
