--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -27,12 +27,6 @@
 }
 
 @media (min-width: 1024px) {
-  .hiddenNavbar {
-    display: none;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease;
-  }
   .containeur_Body_Navbar {
     background-color: var(--grey);
     right: 0px;
@@ -44,6 +38,8 @@
     gap: 3rem;
     opacity: 1;
     transition: opacity 0.3s ease;
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
   }
 
   .containeur_Body_Navbar.visible {
@@ -136,5 +132,9 @@
   .favorites_Navbar_bloc,
   .profil_Navbar_bloc {
     gap: 5px;
+  }
+
+  .visible {
+    transform: translateX(0%);
   }
 }
