--- a/frontend/src/components/Carousel_Category/Carousel_Category.css
+++ b/frontend/src/components/Carousel_Category/Carousel_Category.css
@@ -1,6 +1,6 @@
 .slick-slider {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .slick-dots li button:before {
@@ -11,4 +11,19 @@
 .slick-dots li.slick-active button:before {
   opacity: 1;
   color: var(--orange);
+}
+
+.slick-dots {
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .slider_Home,
+  .slick-track {
+    gap: 0.5rem;
+  }
+  .slick-slider {
+    width: 295px;
+    height: auto;
+  }
 }
