--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -7,6 +7,7 @@
   min-height: calc(100vh - 1.562rem);
   gap: 0.5rem;
   padding-bottom: 5.5rem;
+  padding-top: 6rem;
 }
 
 .inputSection {
@@ -92,6 +93,7 @@
     min-height: calc(100vh);
     justify-content: center;
     align-items: center;
+    padding-top: 7rem;
   }
   .desc_N_Coms {
     width: 966px;
