--- a/frontend/src/pages/Subscriptions/Subscriptions.css
+++ b/frontend/src/pages/Subscriptions/Subscriptions.css
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 5rem;
 }
 
 .title_Sub {
@@ -28,5 +29,6 @@
 @media only screen and (min-width: 1024px) {
   * .container_Body_Sub {
     min-height: 100vh;
+    padding-bottom: 0;
   }
 }
