--- a/frontend/src/pages/Upload/Addshorts/Addshorts.css
+++ b/frontend/src/pages/Upload/Addshorts/Addshorts.css
@@ -6,6 +6,7 @@
   color: var(--white);
   text-align: center;
   min-height: calc(100vh - 5.5rem);
+  padding-top: 3rem;
 }
 
 .upload_Main_Title_Video {
