--- a/frontend/src/pages/UsersProfile/UsersProfile.css
+++ b/frontend/src/pages/UsersProfile/UsersProfile.css
@@ -7,6 +7,8 @@
   text-align: center;
   min-height: calc(100vh + 6rem);
   justify-content: flex-start;
+  padding-bottom: 5rem;
+  padding-top: 7rem;
 }
 
 .user_Info_Container {
@@ -213,5 +215,8 @@
 
   .img_And_Username_Container {
     width: 70%;
+  }
+  .container_Body_User_Profile {
+    padding-bottom: 0;
   }
 }
