--- a/frontend/src/components/Carousel_Category/Carousel_Category.css
+++ b/frontend/src/components/Carousel_Category/Carousel_Category.css
@@ -2,6 +2,14 @@
   width: 100%;
   height: auto;
 }
+.slick-slide .slick-cloned {
+  overflow: hidden;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+  overflow: hidden;
+}
 
 .slick-dots li button:before {
   color: var(--white);
