--- a/frontend/src/components/Carousel_Trend/Carousel_Trend.css
+++ b/frontend/src/components/Carousel_Trend/Carousel_Trend.css
@@ -2,6 +2,15 @@
   width: 100%;
 }
 
+.slick-slide .slick-cloned {
+  overflow: hidden;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+  overflow: hidden;
+}
+
 .slick-dots li button:before {
   color: var(--white);
   opacity: 0.75;
