pre merge last day

--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -6,7 +6,6 @@
   color: var(--white);
   min-height: calc(100vh - 5.5rem);
   justify-content: flex-start;
-  margin: 0 1rem;
 }
 
 .container_Body_Home {
@@ -15,6 +14,8 @@
   flex-direction: column;
   justify-content: center;
   color: var(--white);
+  padding-top: 2rem;
+  padding-bottom: 5.5rem;
 }
 
 .container_Carousel {
@@ -72,5 +73,8 @@
 
   .slider_Home {
     width: 100%;
+  }
+  .container_Home {
+    padding-bottom: 15rem;
   }
 }
