adding all staged files

--- a/frontend/src/pages/SearchResult/SearchResult.css
+++ b/frontend/src/pages/SearchResult/SearchResult.css
@@ -1,7 +1,14 @@
 .search_Result_Section_Wrapper {
   min-height: calc(100vh + 6rem);
-  padding-top: 6rem;
   padding-bottom: 5rem;
+}
+
+.connectedSearch {
+  padding-top: 5rem;
+}
+
+.notConnectedSearch {
+  padding-top: 0;
 }
 
 .search_Result_Section {
@@ -28,7 +35,14 @@
   }
   .search_Result_Section_Wrapper {
     min-height: calc(100vh + 6rem);
-    padding-top: 6rem;
+    padding-top: 0;
     padding-bottom: 0;
+  }
+  .connectedSearch {
+    padding-top: 6rem;
+  }
+
+  .notConnectedSearch {
+    padding-top: 0;
   }
 }
