--- a/frontend/src/components/Watch/Video/WatchingVideoCard.css
+++ b/frontend/src/components/Watch/Video/WatchingVideoCard.css
@@ -59,7 +59,7 @@
 
 .data_Container_Watch {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   flex-direction: column;
   width: 100%;
   padding-left: 3.5%;
