--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -6,7 +6,6 @@
   color: var(--white);
   min-height: calc(100vh - 5.5rem);
   justify-content: flex-start;
-  /* margin: 0 2rem; */
 }
 
 .container_Body_Home {
@@ -15,6 +14,14 @@
   flex-direction: column;
   justify-content: center;
   color: var(--white);
+  padding-bottom: 5.5rem;
+}
+.connectedHome {
+  padding-top: 7rem;
+}
+
+.notConnectedHome {
+  padding-top: 2rem;
 }
 
 .container_Carousel {
@@ -74,5 +81,8 @@
 
   .slider_Home {
     width: 100%;
+  }
+  .container_Home {
+    padding-bottom: 0;
   }
 }
