--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -34,6 +34,7 @@
 }
 .addCommentButton:hover {
   transform: scale(1.03);
+  cursor: pointer;
 }
 .addCommentSection img {
   width: 70px;
@@ -41,8 +42,6 @@
 }
 
 .container_Comment {
-  /* transform: translateX(0%); */
-  /* opacity: 1; */
   display: flex;
   align-items: center;
   width: 82.75%;
