--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -14,13 +14,13 @@
 }
 
 .hide {
-  top: -100%;
+  top: -100% !important;
 }
 .header-unregistered {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 1rem;
+  padding-top: 1rem;
   flex-wrap: wrap;
   border-bottom: 0.0002rem solid var(--white);
   margin-bottom: 1rem;
@@ -111,6 +111,8 @@
   }
   .header-unregistered {
     justify-content: space-around;
+    border-bottom: none;
+    padding-top: 0;
   }
 
   #icon_Sign {
@@ -140,9 +142,7 @@
     font-size: 15px;
     border-radius: 50px;
   }
-  .header-unregistered {
-    border-bottom: none;
-  }
+
   .logIn_Btn {
     width: 17%;
   }
