fixed Navbar for not logged users V2

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding-top: 1rem;
+  padding: 1rem 0;
   flex-wrap: wrap;
   border-bottom: 0.0002rem solid var(--white);
   margin-bottom: 1rem;
@@ -112,7 +112,6 @@
   .header-unregistered {
     justify-content: space-around;
     border-bottom: none;
-    padding-top: 0;
   }
 
   #icon_Sign {
