--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -1,4 +1,4 @@
-.containeur_Body_Video {
+.container_Body_Video {
   background-color: var(--black);
   display: flex;
   flex-direction: column;
@@ -7,7 +7,14 @@
   min-height: calc(100vh - 1.562rem);
   gap: 0.5rem;
   padding-bottom: 5.5rem;
-  padding-top: 6rem;
+}
+
+.connectedVideo {
+  padding-top: 5rem;
+}
+
+.notConnecteVideo {
+  padding-top: 10rem;
 }
 
 .inputSection {
@@ -88,7 +95,7 @@
   outline: none;
 }
 @media only screen and (min-width: 1024px) {
-  .containeur_Body_Video {
+  .container_Body_Video {
     min-height: calc(100vh);
     justify-content: center;
     align-items: center;
